# zipe

./: README.rst  README.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/: __init__.py  test_unzip.py  test_zip.py
tests/bugs/: test_unzip_flat_stored.py
zipe/: unzip.py  util.py  zip.py
