[tool.poetry]
name = "zipe"
version = "0.1.3"
description = "A zip utility for cross OS, especially file name encoding problem."
authors = ["MURAOKA Yusuke <yusuke@jbking.org>"]

[tool.poetry.scripts]
zipe = 'zipe.zip:main'
unzipe = 'zipe.unzip:main'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
