[metadata]
name = zipe
version = 0.1
summary = A zip utility for cross file name encoding powered by Python.
download_url = UNKNOWN
home_page = https://github.com/jbking/zipe
author = MURAOKA Yusuke
author_email = yusuke@jbking.org
classifier = Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7

[files]
packages = zipe
